# contract

./: .covignore  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
src/: balance.rs  config.rs  contract.rs  fees.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
