[package]
name = "contango-token-contract"
description = "Contango standard token contract"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.9" }
soroban-token-sdk = { version = "22.0.1" }

[dev-dependencies]
soroban-sdk = { version = "22.0.9", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true